# badabhai-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .npmrc  .prettierignore  .semgrepignore  .tool-versions  CLAUDE.md  README.md  docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.staging.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/ai-service/: .dockerignore  .env.staging.example  Dockerfile  README.md  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements.txt
apps/ai-service/app/: __init__.py  audio_chunk.py  config.py  contracts.py  extraction.py  llm.py  logging_config.py  main.py  pseudonymize.py  storage.py  stt.py  translate.py
apps/ai-service/scripts/: sample-interview.txt
apps/ai-service/tests/: analysis_parser_coverage.py  audio_fixtures.py  cli_harness.py  conftest.py  profiling_answer_corpus.py  test_ai_router.py  test_answer_chips.py  test_anthropic_client.py  test_audio_chunk.py  test_availability_overmatch.py  test_canonical_roles.py  test_canonicalization_eval.py  test_canonicalize.py  test_canonicalize_endpoint.py  test_city_state_normalization.py  test_cli_edge_cases.py  test_cli_production_parity.py  test_cli_session_defects.py  test_config_env_anchor.py  test_contract_parity.py  test_corpus_assemble.py  test_corpus_consent_gate.py  test_corpus_deidentify.py  test_corpus_finetune_sample.py  test_cost4_templated_default.py  test_credential_id_gate.py  test_cue_fabrication_437_441.py  test_embeddings.py  (+39 more)
(+1560 files in other folders)
