[project]
name = "badabhai-ai-service"
version = "0.1.0"
description = "BadaBhai AI service (FastAPI): pseudonymization gateway, profiling, extraction, resume."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
